Consolidate how ImageDocument sets image styling

* Consolidate how the image sets the cursor styling inside of
  updateImageStyle(), which now checks for whether the cursor
  or checkerboard size has changed during styling updates.

* Fix how the magnifying glass cursor is initialized on desktop
  versions of the page.

BUG=664782

Review-Url: https://codereview.chromium.org/2523553002
Cr-Commit-Position: refs/heads/master@{#434020}

Former-commit-id: 893f3dcf906b25e13e9d4951a52aa30843875ef5