third_party/WebKit/Source/core/html/ImageDocument.h
@@ -87,7 +87,11 @@ class CORE_EXPORT ImageDocument final : public HTMLDocument {
   bool m_imageIsLoaded;
 
   // Size of the checkerboard background tiles
-  int m_checkerSize;
+  int m_styleCheckerSize;
+
+  // Desktop: State of the mouse cursor in the image style
+  enum MouseCursorMode { Default, ZoomIn, ZoomOut };
+  MouseCursorMode m_styleMouseCursorMode;
 
   enum ShrinkToFitMode { Viewport, Desktop };
   ShrinkToFitMode m_shrinkToFitMode;
